--- a/package.json
+++ b/package.json
@@ -1,8 +1,21 @@
 {
-  "name": "mean-template",
+  "name": "mean-coffee-jade-template",
   "version": "1.0.0",
   "description": "",
   "main": "server.coffee",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/stephane-ruhlmann/mean-coffee-jade-template.git"
+  },
+  "author": "stephane-ruhlmann <stephanej.ruhlmann@yahoo.com> (stephane-ruhlmann.com)",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/stephane-ruhlmann/mean-coffee-jade-template/issues"
+  },
+  "homepage": "https://github.com/stephane-ruhlmann/mean-coffee-jade-template",
   "dependencies": {
     "body-parser": "^1.12.2",
     "coffee-script": "^1.9.1",
@@ -12,12 +25,6 @@
     "jade": "^1.9.2",
     "method-override": "^2.3.2",
     "mongoose": "^4.0.1",
-    "underscore": "^1.8.2",
-  },
-  "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "stephane-ruhlmann <stephanej.ruhlmann@yahoo.com> (stephane-ruhlmann.com)",
-  "license": "ISC"
+    "underscore": "^1.8.2"
+  }
 }
